--- a/dreimal.html
+++ b/dreimal.html
@@ -6,256 +6,262 @@
     <title></title>
   </head>
   <body>
-    <div class="grid">
-      <div class="1-1">
-        <a href="zweimal.html">
-        <img src="img/p.s_1.png" alt="1" width="100%">
-        </a>
-      </div>
-      <div class="1-2">
-        <img src="img/p.s_2.png" alt="2" width="100">
-      </div>
-      <div class="1-3">
-        <img src="img/ng.np_1.png" alt="3" width="100%">
-      </div>
-      <div class="1-4">
-        <img src="img/ng.p_1.png" alt="4" width="100%">
-      </div>
-      <div class="1-5">
-        <img src="img/g.ng_1.png" alt="5" width="100%">
-      </div>
-      <div class="1-6">
-        <img src="img/s.g_2.png" alt="6" width="100%">
-      </div>
-      <div class="1-7">
-        <img src="img/ng.y_2.png" alt="7" width="100%">
-      </div>
-      <div class="1-8">
-        <img src="img/ng.y_3.png" alt="8" width="100%">
-      </div>
-      <div class="1-9">
-        <img src="img/ng.g_3.png" alt="9" width="100%">
-      </div>
-      <div class="2-1">
-        <img src="img/p.s_3.png" alt="10" width="100%">
-      </div>
-      <div class="2-2">
-        <img src="img/s.p_2.png" alt="11" width="100%">
-      </div>
-      <div class="2-3">
-        <img src="img/g.np_1.png" alt="12" width="100%">
-      </div>
-      <div class="2-4">
-        <img src="img/s.y_3.png" alt="13" width="100%">
-      </div>
-      <div class="2-5">
-        <img src="img/s.g_1.png" alt="14" width="100%">
-      </div>
-      <div class="2-6">
-        <img src="img/g.y_1.png" alt="15" width="100%">
-      </div>
-      <div class="2-7">
-        <img src="img/ng.p_3.png" alt="16" width="100%">
-      </div>
-      <div class="2-8">
-        <img src="img/g.s_3.png" alt="17" width="100%">
-      </div>
-      <div class="2-9">
-        <img src="img/g.ng_3.png" alt="18" width="100%">
-      </div>
-      <div class="3-1">
-        <img src="img/p.np_1.png" alt="19" width="100%">
-      </div>
-      <div class="3-2">
-        <img src="img/np.s_2.png" alt="20" width="100%">
-      </div>
-      <div class="3-3">
-        <img src="img/np.ng_3.png" alt="21" width="100%">
-      </div>
-      <div class="3-4">
-        <img src="img/ng.np_3.png" alt="22" width="100%">
-      </div>
-      <div class="3-5">
-        <img src="img/p.y_2.png" alt="23" width="100%">
-      </div>
-      <div class="3-6">
-        <img src="img/np.g_1.png" alt="24" width="100%">
-      </div>
-      <div class="3-7">
-        <img src="img/p.g_3.png" alt="25" width="100%">
-      </div>
-      <div class="3-8">
-        <img src="img/g.p_2.png" alt="26" width="100%">
-      </div>
-      <div class="3-9">
-        <img src="img/g.nb_2.png" alt="27" width="100%">
-      </div>
-      <div class="4-1">
-        <img src="img/p.np_3.png" alt="28" width="100%">
-      </div>
-      <div class="4-2">
-        <img src="img/np.s_3.png" alt="29" width="100%">
-      </div>
-      <div class="4-3">
-        <img src="img/np.p_1.png" alt="30" width="100%">
-      </div>
-      <div class="4-4">
-        <img src="img/np.y_1.png" alt="31" width="100%">
-      </div>
-      <div class="4-5">
-        <img src="img/p.y_3.png" alt="32" width="100%">
-      </div>
-      <div class="4-6">
-        <img src="img/p.g_1.png" alt="33" width="100%">
-      </div>
-      <div class="4-7">
-        <img src="img/b.s_1.png" alt="34" width="100%">
-      </div>
-      <div class="4-8">
-        <img src="img/b.np_2.png" alt="35" width="100%">
-      </div>
-      <div class="4-9">
-        <img src="img/b.np_1.png" alt="36" width="100%">
-      </div>
-      <div class="5-1">
-        <img src="img/np.p_3.png" alt="37" width="100%">
-      </div>
-      <div class="5-2">
-        <img src="img/s.np_3.png" alt="38" width="100%">
-      </div>
-      <div class="5-3">
-        <img src="img/np.y_3.png" alt="39" width="100%">
-      </div>
-      <div class="5-4">
-        <img src="img/np.g_2.png" alt="40" width="100%">
-      </div>
-      <div class="5-5">
-        <a href="viermal.html">
-        <img src="img/g.np_2.png" alt="41" width="100%">
-        </a>
-      </div>
-      <div class="5-6">
-        <img src="img/b.s_2.png" alt="42" width="100%">
-      </div>
-      <div class="5-7">
-        <img src="img/b.s_2.png" alt="43" width="100%">
-      </div>
-      <div class="5-8">
-        <img src="img/p.b_3.png" alt="44" width="100%">
-      </div>
-      <div class="5-9">
-        <img src="img/s.b_3.png" alt="45" width="100%">
-      </div>
-      <div class="6-1">
-        <img src="img/r.np_1.png" alt="46" width="100%">
-      </div>
-      <div class="6-2">
-        <img src="img/y.r_2.png" alt="47" width="100%">
-      </div>
-      <div class="6-3">
-        <img src="img/y.np_3.png" alt="48" width="100%">
-      </div>
-      <div class="6-4">
-        <img src="img/y.np_2.png" alt="49" width="100%">
-      </div>
-      <div class="6-5">
-        <img src="img/np.g_3.png" alt="50" width="100%">
-      </div>
-      <div class="6-6">
-        <img src="img/b.y_1.png" alt="51" width="100%">
-      </div>
-      <div class="6-7">
-        <img src="img/b.nb_2.png" alt="52" width="100%">
-      </div>
-      <div class="6-8">
-        <img src="img/np.b_3.png" alt="53" width="100%">
-      </div>
-      <div class="6-9">
-        <img src="img/b.s_3.png" alt="54" width="100%">
-      </div>
-      <div class="7-1">
-        <img src="img/p.r_2.png" alt="55" width="100%">
-      </div>
-      <div class="7-2">
-        <img src="img/r.np_2.png" alt="56" width="100%">
-      </div>
-      <div class="7-3">
-        <img src="img/r.ng_1.png" alt="57" width="100%">
-      </div>
-      <div class="7-4">
-        <img src="img/y.p_3.png" alt="58" width="100%">
-      </div>
-      <div class="7-5">
-        <img src="img/g.np_3.png" alt="59" width="100%">
-      </div>
-      <div class="7-6">
-        <img src="img/g.b_2.png" alt="60" width="100%">
-      </div>
-      <div class="7-7">
-        <img src="img/g.b_3.png" alt="61" width="100%">
-      </div>
-      <div class="7-8">
-        <img src="img/b.np_3.png" alt="62" width="100%">
-      </div>
-      <div class="7-9">
-        <img src="img/r.k_1.png" alt="63" width="100%">
-      </div>
-      <div class="8-1">
-        <img src="img/np.r_3.png" alt="64" width="100%">
-      </div>
-      <div class="8-2">
-        <img src="img/r.y_3.png" alt="65" width="100%">
-      </div>
-      <div class="8-3">
-        <img src="img/r.s_3.png" alt="66" width="100%">
-      </div>
-      <div class="8-4">
-        <img src="img/r.g_3.png" alt="67" width="100%">
-      </div>
-      <div class="8-5">
-        <img src="img/y.r_1.png" alt="68" width="100%">
-      </div>
-      <div class="8-6">
-        <img src="img/p.k_2.png" alt="69" width="100%">
-      </div>
-      <div class="8-7">
-        <img src="img/y.b_3.png" alt="70" width="100%">
-      </div>
-      <div class="8-8">
-        <img src="img/b.r_1.png" alt="71" width="100%">
-      </div>
-      <div class="8-9">
-        <img src="img/b.r_2.png" alt="72" width="100%">
-      </div>
-      <div class="9-1">
-        <img src="img/r.np_3.png" alt="73" width="100%">
-      </div>
-      <div class="9-2">
-        <img src="img/p.r_3.png" alt="74" width="100%">
-      </div>
-      <div class="9-3">
-        <img src="img/r.ng_2.png" alt="75" width="100%">
-      </div>
-      <div class="9-4">
-        <img src="img/r.ng_3.png" alt="76" width="100%">
-      </div>
-      <div class="9-5">
-        <img src="img/g.r_3.png" alt="77" width="100%">
-      </div>
-      <div class="9-6">
-        <img src="img/g.k_1.png" alt="78" width="100%">
-      </div>
-      <div class="9-7">
-        <img src="img/g.k_2.png" alt="79" width="100%">
-      </div>
-      <div class="9-8">
-        <img src="img/b.r_3.png" alt="80" width="100%">
-      </div>
-      <div class="9-9">
-        <a href="dreimal.html">
-        <img src="img/p.k_3.png" alt="81" width="100%">
-        </a>  
-      </div>
+    <div class="content">
+        <div class="grid01">
+        </div>
+        <div class="grid">
+          <div class="1-1">
+            <a href="zweimal.html">
+            <img src="img/p.s_1.png" alt="1" width="100%">
+            </a>
+          </div>
+          <div class="1-2">
+            <img src="img/p.s_2.png" alt="2" width="100%">
+          </div>
+          <div class="1-3">
+            <img src="img/ng.np_1.png" alt="3" width="100%">
+          </div>
+          <div class="1-4">
+            <img src="img/ng.p_1.png" alt="4" width="100%">
+          </div>
+          <div class="1-5">
+            <img src="img/g.ng_1.png" alt="5" width="100%">
+          </div>
+          <div class="1-6">
+            <img src="img/s.g_2.png" alt="6" width="100%">
+          </div>
+          <div class="1-7">
+            <img src="img/ng.y_2.png" alt="7" width="100%">
+          </div>
+          <div class="1-8">
+            <img src="img/ng.y_3.png" alt="8" width="100%">
+          </div>
+          <div class="1-9">
+            <img src="img/ng.g_3.png" alt="9" width="100%">
+          </div>
+          <div class="2-1">
+            <img src="img/p.s_3.png" alt="10" width="100%">
+          </div>
+          <div class="2-2">
+            <img src="img/s.p_2.png" alt="11" width="100%">
+          </div>
+          <div class="2-3">
+            <img src="img/g.np_1.png" alt="12" width="100%">
+          </div>
+          <div class="2-4">
+            <img src="img/s.y_3.png" alt="13" width="100%">
+          </div>
+          <div class="2-5">
+            <img src="img/s.g_1.png" alt="14" width="100%">
+          </div>
+          <div class="2-6">
+            <img src="img/g.y_1.png" alt="15" width="100%">
+          </div>
+          <div class="2-7">
+            <img src="img/ng.p_3.png" alt="16" width="100%">
+          </div>
+          <div class="2-8">
+            <img src="img/g.s_3.png" alt="17" width="100%">
+          </div>
+          <div class="2-9">
+            <img src="img/g.ng_3.png" alt="18" width="100%">
+          </div>
+          <div class="3-1">
+            <img src="img/p.np_1.png" alt="19" width="100%">
+          </div>
+          <div class="3-2">
+            <img src="img/np.s_2.png" alt="20" width="100%">
+          </div>
+          <div class="3-3">
+            <img src="img/np.ng_3.png" alt="21" width="100%">
+          </div>
+          <div class="3-4">
+            <img src="img/ng.np_3.png" alt="22" width="100%">
+          </div>
+          <div class="3-5">
+            <img src="img/p.y_2.png" alt="23" width="100%">
+          </div>
+          <div class="3-6">
+            <img src="img/np.g_1.png" alt="24" width="100%">
+          </div>
+          <div class="3-7">
+            <img src="img/p.g_3.png" alt="25" width="100%">
+          </div>
+          <div class="3-8">
+            <img src="img/g.p_2.png" alt="26" width="100%">
+          </div>
+          <div class="3-9">
+            <img src="img/g.nb_2.png" alt="27" width="100%">
+          </div>
+          <div class="4-1">
+            <img src="img/p.np_3.png" alt="28" width="100%">
+          </div>
+          <div class="4-2">
+            <img src="img/np.s_3.png" alt="29" width="100%">
+          </div>
+          <div class="4-3">
+            <img src="img/np.p_1.png" alt="30" width="100%">
+          </div>
+          <div class="4-4">
+            <img src="img/np.y_1.png" alt="31" width="100%">
+          </div>
+          <div class="4-5">
+            <img src="img/p.y_3.png" alt="32" width="100%">
+          </div>
+          <div class="4-6">
+            <img src="img/p.g_1.png" alt="33" width="100%">
+          </div>
+          <div class="4-7">
+            <img src="img/b.s_1.png" alt="34" width="100%">
+          </div>
+          <div class="4-8">
+            <img src="img/b.np_2.png" alt="35" width="100%">
+          </div>
+          <div class="4-9">
+            <img src="img/b.np_1.png" alt="36" width="100%">
+          </div>
+          <div class="5-1">
+            <img src="img/np.p_3.png" alt="37" width="100%">
+          </div>
+          <div class="5-2">
+            <img src="img/s.np_3.png" alt="38" width="100%">
+          </div>
+          <div class="5-3">
+            <img src="img/np.y_3.png" alt="39" width="100%">
+          </div>
+          <div class="5-4">
+            <img src="img/np.g_2.png" alt="40" width="100%">
+          </div>
+          <div class="5-5">
+            <a href="viermal.html">
+            <img src="img/g.np_2.png" alt="41" width="100%">
+            </a>
+          </div>
+          <div class="5-6">
+            <img src="img/b.s_2.png" alt="42" width="100%">
+          </div>
+          <div class="5-7">
+            <img src="img/b.s_2.png" alt="43" width="100%">
+          </div>
+          <div class="5-8">
+            <img src="img/p.b_3.png" alt="44" width="100%">
+          </div>
+          <div class="5-9">
+            <img src="img/s.b_3.png" alt="45" width="100%">
+          </div>
+          <div class="6-1">
+            <img src="img/r.np_1.png" alt="46" width="100%">
+          </div>
+          <div class="6-2">
+            <img src="img/y.r_2.png" alt="47" width="100%">
+          </div>
+          <div class="6-3">
+            <img src="img/y.np_3.png" alt="48" width="100%">
+          </div>
+          <div class="6-4">
+            <img src="img/y.np_2.png" alt="49" width="100%">
+          </div>
+          <div class="6-5">
+            <img src="img/np.g_3.png" alt="50" width="100%">
+          </div>
+          <div class="6-6">
+            <img src="img/b.y_1.png" alt="51" width="100%">
+          </div>
+          <div class="6-7">
+            <img src="img/b.nb_2.png" alt="52" width="100%">
+          </div>
+          <div class="6-8">
+            <img src="img/np.b_3.png" alt="53" width="100%">
+          </div>
+          <div class="6-9">
+            <img src="img/b.s_3.png" alt="54" width="100%">
+          </div>
+          <div class="7-1">
+            <img src="img/p.r_2.png" alt="55" width="100%">
+          </div>
+          <div class="7-2">
+            <img src="img/r.np_2.png" alt="56" width="100%">
+          </div>
+          <div class="7-3">
+            <img src="img/r.ng_1.png" alt="57" width="100%">
+          </div>
+          <div class="7-4">
+            <img src="img/y.p_3.png" alt="58" width="100%">
+          </div>
+          <div class="7-5">
+            <img src="img/g.np_3.png" alt="59" width="100%">
+          </div>
+          <div class="7-6">
+            <img src="img/g.b_2.png" alt="60" width="100%">
+          </div>
+          <div class="7-7">
+            <img src="img/g.b_3.png" alt="61" width="100%">
+          </div>
+          <div class="7-8">
+            <img src="img/b.np_3.png" alt="62" width="100%">
+          </div>
+          <div class="7-9">
+            <img src="img/r.k_1.png" alt="63" width="100%">
+          </div>
+          <div class="8-1">
+            <img src="img/np.r_3.png" alt="64" width="100%">
+          </div>
+          <div class="8-2">
+            <img src="img/r.y_3.png" alt="65" width="100%">
+          </div>
+          <div class="8-3">
+            <img src="img/r.s_3.png" alt="66" width="100%">
+          </div>
+          <div class="8-4">
+            <img src="img/r.g_3.png" alt="67" width="100%">
+          </div>
+          <div class="8-5">
+            <img src="img/y.r_1.png" alt="68" width="100%">
+          </div>
+          <div class="8-6">
+            <img src="img/p.k_2.png" alt="69" width="100%">
+          </div>
+          <div class="8-7">
+            <img src="img/y.b_3.png" alt="70" width="100%">
+          </div>
+          <div class="8-8">
+            <img src="img/b.r_1.png" alt="71" width="100%">
+          </div>
+          <div class="8-9">
+            <img src="img/b.r_2.png" alt="72" width="100%">
+          </div>
+          <div class="9-1">
+            <img src="img/r.np_3.png" alt="73" width="100%">
+          </div>
+          <div class="9-2">
+            <img src="img/p.r_3.png" alt="74" width="100%">
+          </div>
+          <div class="9-3">
+            <img src="img/r.ng_2.png" alt="75" width="100%">
+          </div>
+          <div class="9-4">
+            <img src="img/r.ng_3.png" alt="76" width="100%">
+          </div>
+          <div class="9-5">
+            <img src="img/g.r_3.png" alt="77" width="100%">
+          </div>
+          <div class="9-6">
+            <img src="img/g.k_1.png" alt="78" width="100%">
+          </div>
+          <div class="9-7">
+            <img src="img/g.k_2.png" alt="79" width="100%">
+          </div>
+          <div class="9-8">
+            <img src="img/b.r_3.png" alt="80" width="100%">
+          </div>
+          <div class="9-9">
+            <a href="dreimal.html">
+            <img src="img/p.k_3.png" alt="81" width="100%">
+            </a>
+          </div>
+        </div>
+        <div class="grid02">
+        </div>
     </div>
   </body>
 </html>
