--- a/index.html
+++ b/index.html
@@ -6,38 +6,44 @@
     <title></title>
   </head>
   <body>
-    <div class="grid">
-      <div class="1-1">
-        <a href="index.html">
-        <img src="img/p.s_1.png" alt="1" width="100%">
-        </a>
-      </div>
-      <div class="1-2">
-        <img src="img/g.ng_1.png" alt="2" width="100%">
-      </div>
-      <div class="1-3">
-        <img src="img/ng.g_3.png" alt="3" width="100%">
-      </div>
-      <div class="2-1">
-        <img src="img/np.p_3.png" alt="4" width="100%">
-      </div>
-      <div class="2-2">
-        <a href="zweimal.html">
-        <img src="img/g.np_2.png" alt="5" width="100%">
-        </a>
-      </div>
-      <div class="2-3">
-        <img src="img/s.b_3.png" alt="6" width="100%">
-      </div>
-      <div class="3-1">
-        <img src="img/r.np_3.png" alt="7" width="100%">
-      </div>
-      <div class="3-2">
-        <img src="img/g.r_3.png" alt="8" width="100%">
-      </div>
-      <div class="3-3">
-        <img src="img/p.k_3.png" alt="9" width="100%">
-      </div>
+    <div class="content">
+        <div class="grid01">
+        </div>
+        <div class="grid">
+          <div class="1-1">
+            <a href="index.html">
+            <img src="img/p.s_1.png" alt="1" width="100%">
+            </a>
+          </div>
+          <div class="1-2">
+            <img src="img/g.ng_1.png" alt="2" width="100%">
+          </div>
+          <div class="1-3">
+            <img src="img/ng.g_3.png" alt="3" width="100%">
+          </div>
+          <div class="2-1">
+            <img src="img/np.p_3.png" alt="4" width="100%">
+          </div>
+          <div class="2-2">
+            <a href="zweimal.html">
+            <img src="img/g.np_2.png" alt="5" width="100%">
+            </a>
+          </div>
+          <div class="2-3">
+            <img src="img/s.b_3.png" alt="6" width="100%">
+          </div>
+          <div class="3-1">
+            <img src="img/r.np_3.png" alt="7" width="100%">
+          </div>
+          <div class="3-2">
+            <img src="img/g.r_3.png" alt="8" width="100%">
+          </div>
+          <div class="3-3">
+            <img src="img/p.k_3.png" alt="9" width="100%">
+          </div>
+        </div>
+        <div class="grid02">
+        </div>
     </div>
   </body>
 </html>
