--- a/zweimal.html
+++ b/zweimal.html
@@ -6,121 +6,127 @@
     <title></title>
   </head>
   <body>
-    <div class="grid">
-      <div class="1-1">
-        <a href="index.html">
-        <img src="img/p.s_1.png" alt="1" width="100%">
-        </a>
-      </div>
-      <div class="1-2">
-        <img src="img/ng.np_1.png" alt="2" width="100%">
-      </div>
-      <div class="1-3">
-        <img src="img/g.ng_1.png" alt="3" width="100%">
-      </div>
-      <div class="1-4">
-        <img src="img/s.g_2.png" alt="4" width="100%">
-      </div>
-      <div class="1-5">
-        <img src="img/ng.y_3.png" alt="5" width="100%">
-      </div>
-      <div class="1-6">
-        <img src="img/ng.g_3.png" alt="6" width="100%">
-      </div>
-      <div class="2-1">
-        <img src="img/p.np_1.png" alt="7" width="100%">
-      </div>
-      <div class="2-2">
-        <img src="img/np.ng_3.png" alt="8" width="100%">
-      </div>
-      <div class="2-3">
-        <img src="img/p.y_2.png" alt="9" width="100%">
-      </div>
-      <div class="2-4">
-        <img src="img/np.g_1.png" alt="10" width="100%">
-      </div>
-      <div class="2-5">
-        <img src="img/g.p_2.png" alt="11" width="100%">
-      </div>
-      <div class="2-6">
-        <img src="img/g.nb_2.png" alt="12" width="100%">
-      </div>
-      <div class="3-1">
-        <img src="img/p.np_3.png" alt="13" width="100%">
-      </div>
-      <div class="3-2">
-        <img src="img/np.p_1.png" alt="14" width="100%">
-      </div>
-      <div class="3-3">
-        <a href="dreimal.html">
-        <img src="img/p.y_3.png" alt="15" width="100%">
-        </a>
-      </div>
-      <div class="3-4">
-        <img src="img/p.g_1.png" alt="16" width="100%">
-      </div>
-      <div class="3-5">
-        <img src="img/b.np_2.png" alt="17" width="100%">
-      </div>
-      <div class="3-6">
-        <img src="img/b.np_1.png" alt="18" width="100%">
-      </div>
-      <div class="4-1">
-        <img src="img/np.p_3.png" alt="19" width="100%">
-      </div>
-      <div class="4-2">
-        <img src="img/np.y_3.png" alt="20" width="100%">
-      </div>
-      <div class="4-3">
-        <img src="img/g.np_2.png" alt="21" width="100%">
-      </div>
-      <div class="4-4">
-        <img src="img/b.s_2.png" alt="22" width="100%">
-      </div>
-      <div class="4-5">
-        <img src="img/p.b_3.png" alt="23" width="100%">
-      </div>
-      <div class="4-6">
-        <img src="img/s.b_3.png" alt="24" width="100%">
-      </div>
-      <div class="5-1">
-        <img src="img/p.r_2.png" alt="25" width="100%">
-      </div>
-      <div class="5-2">
-        <img src="img/r.ng_1.png" alt="26" width="100%">
-      </div>
-      <div class="5-3">
-        <img src="img/g.np_3.png" alt="27" width="100%">
-      </div>
-      <div class="5-4">
-        <img src="img/g.b_2.png" alt="28" width="100%">
-      </div>
-      <div class="5-5">
-        <img src="img/b.np_3.png" alt="29" width="100%">
-      </div>
-      <div class="5-6">
-        <img src="img/r.k_1.png" alt="30" width="100%">
-      </div>
-      <div class="6-1">
-        <img src="img/r.np_3.png" alt="31" width="100%">
-      </div>
-      <div class="6-2">
-        <img src="img/r.ng_2.png" alt="32" width="100%">
-      </div>
-      <div class="6-3">
-        <img src="img/g.r_3.png" alt="33" width="100%">
-      </div>
-      <div class="6-4">
-        <img src="img/g.k_1.png" alt="34" width="100%">
-      </div>
-      <div class="6-5">
-        <img src="img/b.r_3.png" alt="35" width="100%">
-      </div>
-      <div class="6-6">
-        <a href="index.html">
-        <img src="img/p.k_3.png" alt="36" width="100%">
-        </a>
-      </div>
-  </div>
+    <div class="content">
+        <div class="grid01">
+        </div>
+        <div class="grid">
+          <div class="1-1">
+            <a href="index.html">
+            <img src="img/p.s_1.png" alt="1" width="100%">
+            </a>
+          </div>
+          <div class="1-2">
+            <img src="img/ng.np_1.png" alt="2" width="100%">
+          </div>
+          <div class="1-3">
+            <img src="img/g.ng_1.png" alt="3" width="100%">
+          </div>
+          <div class="1-4">
+            <img src="img/s.g_2.png" alt="4" width="100%">
+          </div>
+          <div class="1-5">
+            <img src="img/ng.y_3.png" alt="5" width="100%">
+          </div>
+          <div class="1-6">
+            <img src="img/ng.g_3.png" alt="6" width="100%">
+          </div>
+          <div class="2-1">
+            <img src="img/p.np_1.png" alt="7" width="100%">
+          </div>
+          <div class="2-2">
+            <img src="img/np.ng_3.png" alt="8" width="100%">
+          </div>
+          <div class="2-3">
+            <img src="img/p.y_2.png" alt="9" width="100%">
+          </div>
+          <div class="2-4">
+            <img src="img/np.g_1.png" alt="10" width="100%">
+          </div>
+          <div class="2-5">
+            <img src="img/g.p_2.png" alt="11" width="100%">
+          </div>
+          <div class="2-6">
+            <img src="img/g.nb_2.png" alt="12" width="100%">
+          </div>
+          <div class="3-1">
+            <img src="img/p.np_3.png" alt="13" width="100%">
+          </div>
+          <div class="3-2">
+            <img src="img/np.p_1.png" alt="14" width="100%">
+          </div>
+          <div class="3-3">
+            <a href="dreimal.html">
+            <img src="img/p.y_3.png" alt="15" width="100%">
+            </a>
+          </div>
+          <div class="3-4">
+            <img src="img/p.g_1.png" alt="16" width="100%">
+          </div>
+          <div class="3-5">
+            <img src="img/b.np_2.png" alt="17" width="100%">
+          </div>
+          <div class="3-6">
+            <img src="img/b.np_1.png" alt="18" width="100%">
+          </div>
+          <div class="4-1">
+            <img src="img/np.p_3.png" alt="19" width="100%">
+          </div>
+          <div class="4-2">
+            <img src="img/np.y_3.png" alt="20" width="100%">
+          </div>
+          <div class="4-3">
+            <img src="img/g.np_2.png" alt="21" width="100%">
+          </div>
+          <div class="4-4">
+            <img src="img/b.s_2.png" alt="22" width="100%">
+          </div>
+          <div class="4-5">
+            <img src="img/p.b_3.png" alt="23" width="100%">
+          </div>
+          <div class="4-6">
+            <img src="img/s.b_3.png" alt="24" width="100%">
+          </div>
+          <div class="5-1">
+            <img src="img/p.r_2.png" alt="25" width="100%">
+          </div>
+          <div class="5-2">
+            <img src="img/r.ng_1.png" alt="26" width="100%">
+          </div>
+          <div class="5-3">
+            <img src="img/g.np_3.png" alt="27" width="100%">
+          </div>
+          <div class="5-4">
+            <img src="img/g.b_2.png" alt="28" width="100%">
+          </div>
+          <div class="5-5">
+            <img src="img/b.np_3.png" alt="29" width="100%">
+          </div>
+          <div class="5-6">
+            <img src="img/r.k_1.png" alt="30" width="100%">
+          </div>
+          <div class="6-1">
+            <img src="img/r.np_3.png" alt="31" width="100%">
+          </div>
+          <div class="6-2">
+            <img src="img/r.ng_2.png" alt="32" width="100%">
+          </div>
+          <div class="6-3">
+            <img src="img/g.r_3.png" alt="33" width="100%">
+          </div>
+          <div class="6-4">
+            <img src="img/g.k_1.png" alt="34" width="100%">
+          </div>
+          <div class="6-5">
+            <img src="img/b.r_3.png" alt="35" width="100%">
+          </div>
+          <div class="6-6">
+            <a href="index.html">
+            <img src="img/p.k_3.png" alt="36" width="100%">
+            </a>
+          </div>
+        </div>
+        <div class="grid02">
+        </div>
+    </div>
   </body>
 </html>
